--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "noselector",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "noselector ==========",
   "main": "./lib/index.js",
   "scripts": {
@@ -20,7 +20,8 @@
     "nofactor": "0.0.x",
     "expect.js": "0.3.1",
     "mocha": "1.20.1",
-    "jsdom": "^0.10.6"
+    "jsdom": "^0.10.6",
+    "paperclip": "^0.3.127"
   },
   "dependencies": {
     "bindable": "0.5.x",
