--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "noselector",
-  "version": "0.0.3",
+  "version": "0.0.5",
   "description": "noselector ==========",
   "main": "./lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
