--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "noselector",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "noselector ==========",
   "main": "./lib/index.js",
   "scripts": {
@@ -24,7 +24,7 @@
     "paperclip": "0.3.x"
   },
   "dependencies": {
-    "bindable": "0.0.x",
+    "bindable-object": "0.0.x",
     "toarray": "0.0.1",
     "lodash": "^2.4.1"
   }
